correcting contact file

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 
 <body>
   <h3>Nidhi's Contact Details</h3>
-  <p><<strong>Address:</strong> Main Market Sheopur</p>
+  <p><strong>Address:</strong> Main Market Sheopur</p>
   <p><strong>Email:</strong> navika@gmail.com</p>
   <p><strong>Phone Number:</strong> 8458872222</p>
   <a href="index.html">Go to previous page</a>
